--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -48,7 +48,7 @@ import Layout from '../layouts/Layout.astro';
     align-items: center;
   }
   .wrapper {
-    padding: 2rem;
+    padding: 3rem;
   }
   .summary, .container {
     width: 100%;
@@ -58,6 +58,7 @@ import Layout from '../layouts/Layout.astro';
     text-align: center;
   }
   .summary p {
+    text-align: center;
     margin-top: 1rem;
   }
   .container {
@@ -90,29 +91,35 @@ import Layout from '../layouts/Layout.astro';
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    text-align: center;
+    gap: 1.5rem;
     align-items: center;
     color: white;
+    font-size: 1.25rem;
   }
   .cta-link {
-    padding: 0.5rem 1rem;
+    padding: 0.7rem 1.4rem;
+    font-size: 1.2rem;
     background-color: var(--orange);
-    border-radius: 1rem;
+    border-radius: 10rem;
     text-decoration: none;
     color: white;
+    box-shadow: 4px 4px 4px rgb(0 0 0 / 20%);
+  }
+  .cta-link:hover {
+    text-decoration: underline;
   }
   .mission {
     flex-direction: row-reverse;
   }
   @media(max-width: 800px) {
     .container {
+      border-width: 2px;
       flex-direction: column;
       align-items: center;
-      padding: 2rem;
     }
     .mission img, .story img {
       width: 100%;
-      max-width:500px;
       border-radius: 0;
     }
   }
@@ -121,7 +128,7 @@ import Layout from '../layouts/Layout.astro';
       padding: 1rem 0;
     }
     .wrapper {
-      padding: 1rem 0;
+      padding: 2rem 0;
     }
     .cta-wrapper {
       padding: 1rem 0;
@@ -130,15 +137,21 @@ import Layout from '../layouts/Layout.astro';
       padding: 1rem;
     }
     .container {
-      padding: 0 1rem;
+      padding: 0 1.5rem;
       border: none;
       box-shadow: none;
+    }
+    .container h2 {
+      color: var(--orange);
     }
     .story-text, .mission-text {
       padding: 0;
     }
     .summary {
-      padding: 0 1rem;
+      padding: 0 1.5rem;
+    }
+    .summary h2 {
+      display: none;
     }
   }
 </style>
