--- a/src/pages/gallery.astro
+++ b/src/pages/gallery.astro
@@ -1,13 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import { Image } from 'astro:assets';
 ---
 
 <Layout title="Pawprint Photography" headerShadow={false}>
 	<main>
     <h1>Gallery</h1>
     <div class="gallery">
-      <img src="/pet-photography-site/04n5wP8_d.webp">
-      <img src="/pet-photography-site/5q1hSTL.jpeg">
+      <img src="/pet-photography-site/04n5wP8_d.jpg"/>
+      <img src="/pet-photography-site/5q1hSTL.jpg">
       <img src="/pet-photography-site/animal-7220153_1920.jpg">
       <img src="/pet-photography-site/bordeaux-mastiff-7170006_1920.jpg">
       <img src="/pet-photography-site/cat-2083492_1920.jpg">
@@ -20,7 +21,7 @@ import Layout from '../layouts/Layout.astro';
       <img src="/pet-photography-site/european-shorthair-8601492_1920.jpg">
       <img src="/pet-photography-site/finnish-lapphund-8355621_1920.jpg">
       <img src="/pet-photography-site/hamster-3604592_1920.jpg">
-      <img src="/pet-photography-site/t1S6ABe_d.webp">
+      <img src="/pet-photography-site/t1S6ABe_d.jpg">
     </div>
 	</main>
 </Layout>
