--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Pawprint Photography" headerShadow={false}>
+<Layout title="Pawprint Photography" headerShadow={true}>
 	<main>
     <h1>Get in touch</h1>
     <form name="contact-form">
@@ -38,6 +38,7 @@ import Layout from '../layouts/Layout.astro';
 
 <style>
   h1 {
+    margin-top: 2.5rem;
     text-align: center;
     color: var(--orange);
     margin-inline: auto;
